--- a/components/ShopSingle/ShopSingleSection/components/MainProduct/components/StarRatingInput/StarRatingInput.module.scss
+++ b/components/ShopSingle/ShopSingleSection/components/MainProduct/components/StarRatingInput/StarRatingInput.module.scss
@@ -1,83 +1,42 @@
 .starRatingInput {
-  // unicode-bidi: bidi-override;
+  font-size: 20px;
   color: #feb518;
-  display: inline-block;
-  // font-size: 64px;
-  width: fit-content;
-  position: relative;
-  margin: 0;
-  padding: 0;
 
-  font-size: 12px;
+  .starItem {
+    margin-right: 10px;
+    cursor: pointer;
 
-  .fillRating {
-    color: transparent;
-    // height: 50px;
-    padding: 0;
-    position: absolute;
-    z-index: 1;
-    // display: flex;
-    top: 0;
-    left: 0;
-    // overflow: hidden;
-    width: 100%;
-    height: 100%;
+    // &:hover {
+    //   color: #000;
+    // }
+  }
 
-    // pointer-events: none;
+  input {
+    display: none;
+  }
 
-    // width: 0%;
-    // Allows us to grab the width of the span elements
-    input {
-      display: none;
-      // position: absolute;
+  &.unChecked {
+    &:hover {
+      .starItem {
+        &::before {
+          content: '\2605';
+          position: absolute;
+        }
+
+        &:hover ~ .starItem:before {
+          content: none;
+        }
+      }
     }
+  }
 
-    label {
-      // pointer-events: auto;
+  &.checked {
+    .starItem::before {
+      content: '\2605';
       position: absolute;
-      display: flex;
-      cursor: pointer;
-      z-index: 1;
-
-      &:hover {
-        color: #feb518;
-      }
-
-      &.active {
-        color: #feb518;
-      }
-
-      &.oneStar {
-        z-index: 5;
-      }
-      &.twoStars {
-        z-index: 4;
-      }
-      &.threeStars {
-        z-index: 3;
-      }
-      &.fourStars {
-        z-index: 2;
-      }
-      &.fiveStars {
-        z-index: 1;
-      }
     }
-  }
-
-  .emptyRating {
-    display: flex;
-    padding: 0;
-    z-index: 0;
-  }
-
-  .emptyRating,
-  .fillRating {
-    .firstStar,
-    .secondStar,
-    .thirdStar,
-    .fourthStar {
-      margin-right: 10px;
+    input:checked ~ .starItem:before {
+      content: none;
     }
   }
 }
